# method-of-moderation

./: .copier-answers.yml  .dockerignore  .gitignore  .pre-commit-config.yaml  BENCHMARKING-PLAN.md  CITATION.cff  Dockerfile  README.md  REMARK.md  environment.yml  myst.yml  pyproject.toml  reproduce.sh  reproduce_min.sh  requirements.txt  you-are
.agents/: ALGORITHM.md  CODE_MAP.md  COMPARISON.md  OVERVIEW.md  README.md
.agents/metadata/: README.md  equations.json  equations.py  parameters.json
.agents/reproduce/benchmarks/: BENCHMARKING_GUIDE.md  README.md  benchmark.sh  schema.json
.agents/reproduce/benchmarks/results/: README.md
.agents/reproduce/benchmarks/results/autogenerated/: 20260117-162954_min_darwin-arm64.json  latest.json
.agents/reproduce/docker/: README.md  setup.sh
.devcontainer/: devcontainer.json
.github/: CONTRIBUTING.md
.github/workflows/: binder.yml  ci.yml  deploy.yml
.specstory/history/: 2025-12-26_20-46Z-ci-failure-investigation.md
README_IF_YOU_ARE_AN_AI/: ALGORITHM.md  BENCHMARKING-PLAN.md  CODE_MAP.md  COMPARISON.md  KEY_EQUATIONS.md  NOTATION.md  README.md
README_IF_YOU_ARE_AN_AI/benchmarks/: BENCHMARKING_GUIDE.md  README.md  benchmark.sh
README_IF_YOU_ARE_AN_AI/benchmarks/results/: .gitignore  README.md
README_IF_YOU_ARE_AN_AI/metadata/: README.md  algorithm.json  equations.json  parameters.json
REMARK/: COMPLIANCE-REPORT-LATEST.md  REMARK.md
binder/: README.md  apt.txt  environment.yml  postBuild  requirements.txt
code/: dashboard.ipynb  dashboard.md  method-of-moderation-myst.ipynb  method-of-moderation-myst.md  method-of-moderation-symbolic.ipynb  method-of-moderation-symbolic.md  method-of-moderation.ipynb  method-of-moderation.md  moderation.py  notebook.ipynb  notebook.md  plotting.py  style.css  style.py  style_dashboard.css  test_moderation.py  verify_table.py  wordcount.py
condaenv/Scripts/: jsonpointer  numba
condaenv/conda-meta/: bzip2-1.0.8-h0ad9c76_8.json  ca-certificates-2026.1.4-h4c7d964_0.json  history  libexpat-2.7.3-hac47afa_0.json  libffi-3.5.2-h52bdfb6_0.json  liblzma-5.8.1-h2466b09_2.json  libsqlite-3.51.2-hf5d6505_0.json  libzlib-1.3.1-h2466b09_2.json  openssl-3.6.0-h725018a_0.json  pip-25.3-pyh8b19718_0.json  python-3.12.12-h0159041_1_cpython.json  setuptools-80.9.0-pyhff2d567_0.json  tk-8.6.13-h2c6b04d_3.json  tzdata-2025c-hc9c84f9_1.json  ucrt-10.0.26100.0-h57928b3_0.json  vc-14.3-h2df5915_10.json  vc14_runtime-14.44.35208-h818238b_34.json  vcomp14-14.44.35208-h818238b_34.json  wheel-0.45.1-pyhd8ed1ab_1.json
condaenv/etc/: aau_token
content/: macros.yml  references.bib
content/exports/appendix_letters_pdf_tex/: appendix_letters.tex  main.bib
content/exports/moderation_letters_pdf_tex/: main.bib  moderation_letters.tex
content/exports/moderation_with_appendix_pdf_tex/: main.bib  moderation_with_appendix.tex
content/images/: README.md
content/paper/: abstract.md  appendix_letters.md  moderation.md  moderation_letters.md  moderation_with_appendix.md
content/paper/appendix_letters_pdf_tex/: appendix_letters.tex  main.bib
content/paper/moderation_letters_pdf_tex/: main.bib  moderation_letters.tex
content/paper/moderation_pdf_tex/: main.bib  moderation.tex  preprint.sty
content/source/: moderation.tex  moderation_orig.md
metadata/: README.md  equations.json  equations.py
reproduce/benchmarks/: capture_system_info.py
reproduce/benchmarks/results/: README.md
reproduce/benchmarks/results/autogenerated/: 20260117-170812_min_darwin-arm64.json  latest.json
reproduce/docker/: README.md  setup.sh
scripts/: README_word_count.md  count_words.sh  test_wordcount.md
