[project]
name = "moderation"
authors = [
  { name = "Alan Lujan", email = "alanlujan91@gmail.com" },
]
description = "The Method of Moderation Reproducible Repository"
version = "0.1.0"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
dependencies = [
    "econ-ark",
    "ipywidgets>=8.1.7",
    "jupyterlab-myst",
    "jupytext>=1.17.2",
    "matplotlib>=3.9.4",
    "mystmd>=1.7.1",
    "numba>=0.59.0",  # Ensure Python 3.11 compatibility
    "numpy>=2.0.2",
    "scipy>=1.15.3",
    "voila>=0.5.8",
]

[project.urls]
Homepage = "https://github.com/econ-ark/method-of-moderation"
"Bug Tracker" = "https://github.com/econ-ark/method-of-moderation/issues"
Discussions = "https://github.com/econ-ark/method-of-moderation/discussions"
Changelog = "https://github.com/econ-ark/method-of-moderation/releases"

[tool.setuptools]
py-modules = ["moderation", "plotting", "style"]

[tool.setuptools.package-dir]
"" = "code"

[tool.check-wheel-contents]
# W009: Multiple top-level modules - intentional for research code organization
ignore = ["W009"]

[dependency-groups]
test = [
  "pytest >=6",
  "pytest-cov >=3",
  "pytest-xdist",
]
dev = [
  { include-group = "test" },
  "black[jupyter]>=25.1.0",
  "ruff>=0.12.5",
  "mystmd>=1.6.0",
  "jupytext>=1.17.2",
  "jupyterlab",
  "pre-commit>=4.3.0",
]
docs = [
  "sphinx>=7.0",
  "myst_parser>=0.13",
  "sphinx_copybutton",
  "sphinx_autodoc_typehints",
  "furo>=2023.08.17",
]

[tool.ruff]

[tool.ruff.lint]
extend-select = [
  "ARG",      # flake8-unused-arguments
  "B",        # flake8-bugbear
  "C4",       # flake8-comprehensions
  "EM",       # flake8-errmsg
  "EXE",      # flake8-executable
  "G",        # flake8-logging-format
  "I",        # isort
  "ICN",      # flake8-import-conventions
  "NPY",      # NumPy specific rules
  "PD",       # pandas-vet
  "PGH",      # pygrep-hooks
  "PIE",      # flake8-pie
  "PL",       # pylint
  "PT",       # flake8-pytest-style
  "PTH",      # flake8-use-pathlib
  "RET",      # flake8-return
  "RUF",      # Ruff-specific
  "SIM",      # flake8-simplify
  "T20",      # flake8-print
  "UP",       # pyupgrade
  "YTT",      # flake8-2020
]
ignore = [
  "PLR09",    # Too many <...>
  "PLR2004",  # Magic value used in comparison
  "E402",     # Module level import not at top (intentional for notebooks/circular imports)
  "F404",     # __future__ import placement (notebooks can have special requirements)
  "PLC0415",  # Import at top-level (intentional to avoid circular dependencies)
]
isort.required-imports = ["from __future__ import annotations"]
# Uncomment if using a _compat.typing backport
# typing-modules = ["moderation._compat.typing"]



[tool.uv.sources]
econ-ark = { git = "https://github.com/econ-ark/HARK", rev = "master" }
