[project]
name = "moderation"
authors = [
  { name = "Alan Lujan", email = "alanlujan91@gmail.com" },
]
description = "The Method of Moderation Reproducible Repository"
version = "1.0.0"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.11"
dependencies = [
    "econ-ark",
    "ipywidgets>=8.1.7",
    "jupyterlab-myst",
    "jupytext>=1.17.2",
    "matplotlib>=3.9.4",
    "mystmd>=1.7.1",
    "numba>=0.59.0",  # Ensure Python 3.11 compatibility
    "numpy>=2.0.2",
    "scipy>=1.15.3",
    "voila>=0.5.8",
]

[project.urls]
Homepage = "https://github.com/econ-ark/method-of-moderation"
"Bug Tracker" = "https://github.com/econ-ark/method-of-moderation/issues"
Discussions = "https://github.com/econ-ark/method-of-moderation/discussions"

[dependency-groups]
test = [
  "pytest >=6",
  "pytest-cov >=3",
]
dev = [
  { include-group = "test" },
  "ruff>=0.12.5",
  "jupytext>=1.17.2",
  "jupyterlab",
  "pre-commit>=4.3.0",
]

[tool.ruff.lint]
extend-select = [
  "I",        # isort
  "UP",       # pyupgrade
]



[tool.uv.sources]
econ-ark = { git = "https://github.com/econ-ark/HARK", rev = "master" }
